--- a/index.html
+++ b/index.html
@@ -18,35 +18,35 @@
       </figure>
 
       <div class="info gutter-1-4">
-        <h1 class="push-0">Venus</h1>
-        <p class="giga italic">Venus, the second planet in the Solar System.</p>
+        <h1 class="giga push-0">Venus</h1>
+        <p class="mega italic">Venus, the second planet in the Solar System.</p>
         <p>Venus orbits the Sun every 224.7 Earth days. Venus is a terrestrial planet and is sometimes called Earth’s “sister planet” because of their similar size, gravity, and bulk composition. However, it has also been shown to be radically different from Earth in other respects.</p>
 
-        <div class="details">
+        <div class="details giga">
           <h2>Physical characteristics</h2>
           <dl>
             <dt class="milli">Mean radius</dt>
-            <dd class="giga push-0"><data value="6051.8">6051.8±1.0&nbsp;km</data></dd>
+            <dd class="push-0"><data value="6051.8">6051.8±1.0&nbsp;km</data></dd>
             <dt class="milli">Mass</dt>
-            <dd class="giga push-0"><data value="4.8676e+24">4.8676×10<sup>24</sup>&nbsp;kg</data></dd>
+            <dd class="push-0"><data value="4.8676e+24">4.8676×10<sup>24</sup>&nbsp;kg</data></dd>
             <dt class="milli">Surface gravity</dt>
-            <dd class="giga push-0"><data value="8.87">8.87&nbsp;m/s<sup>2</sup></data></dd>
+            <dd class="push-0"><data value="8.87">8.87&nbsp;m/s<sup>2</sup></data></dd>
             <dt class="milli">Axial tilt</dt>
-            <dd class="giga push-0"><data value="177.36">177.36°</data></dd>
+            <dd class="push-0"><data value="177.36">177.36°</data></dd>
           </dl>
         </div>
 
-        <div class="details">
+        <div class="details giga">
           <h2>Orbital Characteristics</h2>
           <dl>
             <dt class="milli">Aphelion</dt>
-            <dd class="giga push-0"><data value="108939000">108&nbsp;939&nbsp;000&nbsp;km</data></dd>
+            <dd class="push-0"><data value="108939000">108&nbsp;939&nbsp;000&nbsp;km</data></dd>
             <dt class="milli">Perihelion</dt>
-            <dd class="giga push-0"><data value="107477000">107&nbsp;477&nbsp;000&nbsp;km</data></dd>
+            <dd class="push-0"><data value="107477000">107&nbsp;477&nbsp;000&nbsp;km</data></dd>
             <dt class="milli">Orbital period</dt>
-            <dd class="giga push-0"><data value="224.701">224.701&nbsp;d</data></dd>
+            <dd class="push-0"><data value="224.701">224.701&nbsp;d</data></dd>
             <dt class="milli">Average orbital speed</dt>
-            <dd class="giga push-0"><data value="35.02">35.02&nbsp;km/s</data></dd>
+            <dd class="push-0"><data value="35.02">35.02&nbsp;km/s</data></dd>
           </dl>
         </div>
       </div>
