--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <p class="mega italic">Venus, the second planet in the Solar System.</p>
         <p>Venus orbits the Sun every 224.7 Earth days. Venus is a terrestrial planet and is sometimes called Earth’s “sister planet” because of their similar size, gravity, and bulk composition. However, it has also been shown to be radically different from Earth in other respects.</p>
 
-        <div class="details giga">
-          <h2>Physical characteristics</h2>
+        <div class="details">
+          <h2 class="giga">Physical characteristics</h2>
           <dl>
             <dt class="milli">Mean radius</dt>
             <dd class="push-0"><data value="6051.8">6051.8±1.0&nbsp;km</data></dd>
@@ -36,8 +36,8 @@
           </dl>
         </div>
 
-        <div class="details giga">
-          <h2>Orbital Characteristics</h2>
+        <div class="details">
+          <h2 class="giga">Orbital Characteristics</h2>
           <dl>
             <dt class="milli">Aphelion</dt>
             <dd class="push-0"><data value="108939000">108&nbsp;939&nbsp;000&nbsp;km</data></dd>
